Close #113 - modify build.yaml

--- a/ContagiousDiseaseManagementSystem/.github/workflows/build.yaml
+++ b/ContagiousDiseaseManagementSystem/.github/workflows/build.yaml
@@ -20,6 +20,6 @@ jobs:
 
     - name: Run gradle test
       run: |
-        cd ContagiousDiseaseManagementSystem/server
+        cd server
         chmod 755 ./gradlew
         ./gradlew test
