--- a/ContagiousDiseaseManagementSystem/.github/workflows/build.yaml
+++ b/ContagiousDiseaseManagementSystem/.github/workflows/build.yaml
@@ -20,7 +20,6 @@ jobs:
 
     - name: Run gradle test
       run: |
-        cd ContagiousDiseaseManagementSystem
-        cd server
+        cd ContagiousDiseaseManagementSystem\server
         chmod 755 ./gradlew
         ./gradlew test
