Close #118 - modify build.yaml and modify back to origin build.gradle

--- a/ContagiousDiseaseManagementSystem/.github/workflows/build.yaml
+++ b/ContagiousDiseaseManagementSystem/.github/workflows/build.yaml
@@ -20,6 +20,7 @@ jobs:
 
     - name: Run gradle test
       run: |
-        cd ContagiousDiseaseManagementSystem\server
+        cd ContagiousDiseaseManagementSystem
+        cd server
         chmod 755 ./gradlew
         ./gradlew test
