--- a/ContagiousDiseaseManagementSystem/client/package.json
+++ b/ContagiousDiseaseManagementSystem/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "0.18.0",
     "core-js": "^3.4.3",
+    "v-slim-dialog": "^0.0.9",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuejs-logger": "1.5.3",
